https://gitlab.com/plvr/ndm/ndm-project/-/issues/332 - Updated the Meta description tag, - updated the html title, - Fixed the rate per night. It was showing up in the thousands., - Fixed css on the Destination PackageTile, - Added an Image Carousel to the DestinationPackageTile, - Changed some stuff up on the Itinerary Info Card, - Updated the LabelInput to have other types, - Made the Reservation Accordion mobile friendly, - Added Upsell Packages to the ReservationDetailsAccordion, - Removed the reservation.model.ts folder. (I changed the getByPaged endpoint), - Made the EditExistingServicesPage, - Removed the "I Agree with the privacy terms and booking conditions, - Misc site clean ups, - Added carousel to reservationCard

--- a/src/components/reservationCard/ReservationCard.scss
+++ b/src/components/reservationCard/ReservationCard.scss
@@ -12,6 +12,24 @@
 			height: 100%;
 			object-fit: cover;
 		}
+		.rsCarousel {
+			margin-right: 16px;
+			height: 230px;
+			width: 262px;
+			min-width: 262px;
+			.carouselParent {
+				overflow-x: hidden;
+			}
+			.imageWrapper {
+				width: 262px;
+				height: 230px;
+				img {
+					width: 100%;
+					height: 100%;
+					object-fit: cover;
+				}
+			}
+		}
 	}
 
 	.columnTwo {
